tests-integration/fixtures/checking2/168_do_final_let/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: Effect Int
test' :: ?[invalid final let]

Types

Diagnostics
error[InvalidFinalLet]: Invalid final let statement in do expression
  --> 7:3..7:12
  |
7 |   let x = 1
  |   ^~~~~~~~~
error[CannotUnify]: Cannot unify '?[invalid final let]' with 'Effect Int'
  --> 6:8..7:12
  |
6 | test = do
  |        ^~
error[InvalidFinalLet]: Invalid final let statement in do expression
  --> 10:3..10:12
   |
10 |   let x = 1
   |   ^~~~~~~~~
error[CannotUnify]: Cannot unify 'Type' with '?[invalid kind]'
  --> 9:1..10:12
  |
9 | test' = do
  | ^~~~~~~~~~
